components/redis/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-cart
  namespace: cartservice
spec:
  podSelector:
    matchLabels:
      app: redis-cart
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: cartservice
      ports:
        - port: 6379
          protocol: TCP
  egress:
    - {}
